@ no longer clipping

--- a/css/about_us.css
+++ b/css/about_us.css
@@ -42,6 +42,7 @@
     margin: 0;
     font-size: 1rem;
     color: #f9f9f9;
+    margin-bottom: 3px;
 }
 
 .carousel {
